--- a/templates/make-snapshot.service
+++ b/templates/make-snapshot.service
@@ -7,7 +7,7 @@ After=local-fs-pre.target
 Before=local-fs.target
 
 [Install]
-WantedBy=make-snapshots.target
+WantedBy=make-snapshot.target
 
 [Service]
 Type=oneshot
