--- a/templates/custom.cfg
+++ b/templates/custom.cfg
@@ -5,9 +5,9 @@ menuentry 'Arch Linux - Make snapshot' {
 	insmod luks
 	insmod lvm
 	echo	'Loading Linux linux ...'
-	linux	/boot/vmlinuz-linux root=/dev/mapper/vg-root rw cryptdevice=UUID=[DEV_CRYPT]:cryptroot quiet loglevel=3 acpi_osi= systemd.unit=make-snapshot.target
+	linux	/boot/vmlinuz-linux-lts root=/dev/mapper/vg-root rw quiet loglevel=3 acpi_osi= systemd.unit=make-snapshot.target
 	echo	'Loading initial ramdisk ...'
-	initrd  /boot/intel-ucode.img /boot/initramfs-linux.img
+	initrd  /boot/intel-ucode.img /boot/initramfs-linux-lts.img
 }
 menuentry 'Arch Linux - Boot snapshot' {
 	insmod part_gpt
@@ -15,17 +15,7 @@ menuentry 'Arch Linux - Boot snapshot' {
 	insmod luks
 	insmod lvm
 	echo	'Loading Linux linux ...'
-	linux	/boot/vmlinuz-linux root=/dev/mapper/vg-snap rw cryptdevice=UUID=[DEV_CRYPT]:cryptroot quiet loglevel=3 acpi_osi=
+	linux	/boot/vmlinuz-linux-lts root=/dev/mapper/vg-snap rw quiet loglevel=3 acpi_osi=
 	echo	'Loading initial ramdisk ...'
-	initrd  /boot/intel-ucode.img /boot/initramfs-linux.img
-}
-menuentry 'Arch Linux - Rollback snapshot' {
-	insmod part_gpt
-	insmod cryptodisk
-	insmod luks
-	insmod lvm
-	echo	'Loading Linux linux ...'
-	linux	/boot/vmlinuz-linux root=/dev/mapper/vg-root rw cryptdevice=UUID=[DEV_CRYPT]:cryptroot quiet loglevel=3 acpi_osi= systemd.unit=rollback-snapshot.target
-	echo	'Loading initial ramdisk ...'
-	initrd  /boot/intel-ucode.img /boot/initramfs-linux.img
+	initrd  /boot/intel-ucode.img /boot/initramfs-linux-lts.img
 }
